project links and wording updates

--- a/_config.yml
+++ b/_config.yml
@@ -56,3 +56,13 @@ plugins:
 
 theme: jekyll-theme-midnight
 future: true
+
+
+itch_drmelon: https://drmelon.itch.io/
+itch_jctwizard: https://jctwizard.itch.io/
+itch_johnjoemcbob: https://johnjoemcbob.itch.io/
+itch_leafcodes: https://leafcodes.itch.io/
+itch_sunshinemoon: https://sunshine-moon.itch.io/
+itch_tackyvillain: https://tackyvillain.itch.io/
+web_niallem: https://www.niallmoody.com/
+web_tomdemajo: https://www.tomdemajo.com/
